--- a/requirements.txt
+++ b/requirements.txt
@@ -78,7 +78,7 @@ scipy==1.15.3
     #   shap
 seaborn==0.13.2
     # via -r requirements.in
-shap==0.49.1
+shap==0.50.0
     # via -r requirements.in
 six==1.17.0
     # via python-dateutil
@@ -86,17 +86,11 @@ slicer==0.0.8
     # via shap
 threadpoolctl==3.6.0
     # via scikit-learn
-tomli==2.4.0
-    # via
-    #   autopep8
-    #   pylint
 tomlkit==0.14.0
     # via pylint
 tqdm==4.67.3
     # via shap
 typing-extensions==4.15.0
-    # via
-    #   astroid
-    #   shap
+    # via shap
 tzdata==2025.3
     # via pandas
